--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lab1-crypto",
+  "name": "crypto",
   "version": "1.0.0",
   "description": "The demo of several cryptographic algorithms for COMP4142, PolyU.",
   "scripts": {
@@ -9,12 +9,12 @@
   "license": "MIT",
   "dependencies": {
     "@babel/node": "^7.16.0",
-    "axios": "^0.24.0",
     "bs58": "^4.0.1",
     "chalk": "^4.1.2",
     "elliptic": "^6.5.4",
     "express": "^4.17.1",
     "mongoose": "^6.0.13",
+    "node-fetch-commonjs": "^3.0.3",
     "node-rsa": "^1.1.1",
     "object-hash": "^2.2.0",
     "randombytes": "^2.1.0"
