--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "@babel/node": "^7.16.0",
     "bs58": "^4.0.1",
     "chalk": "^4.1.2",
+    "crypto-js": "^4.1.1",
     "elliptic": "^6.5.4",
     "express": "^4.17.1",
     "mongoose": "^6.0.13",
     "node-fetch-commonjs": "^3.0.3",
-    "node-rsa": "^1.1.1",
-    "object-hash": "^2.2.0",
     "randombytes": "^2.1.0"
   }
 }
